Update Микроразметка контактов организации Sсhema.org

--- a/Микроразметка контактов организации Sсhema.org
+++ b/Микроразметка контактов организации Sсhema.org
@@ -14,7 +14,7 @@
 1. Добавить блок div с параметром itemscope itemtype=»https://schema.org/Organization»
 По сути, этим шагом мы указываем, что вот тут начинается микроразметка и она будет про нашу организацию.
 На выходе получим примерно вот так:
-
+```html
 <div itemscope itemtype="http://schema.org/Organization">
 Организация: ООО "Алфёров.су"
 Телефон: +7 (555) 555-55-55
@@ -23,6 +23,7 @@
 Адрес: Невский проспект 1
 Email: 123@123.ru
 </div>
+```
 2. Теперь надо разметить контакты. Для начала разметим адрес, и для него есть есть отдельный блок, по аналогии с https://schema.org/Organization и называется он http://schema.org/PostalAddress.
 Как и в предыдущем пункте — вынесем наш адрес в отдельный блок div с данным параметром:
 Получим:
